5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1752_1521.log
== TEST (2019-05-16 17:10:08) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 0

cont = 0

while (cont < capacidadeN):
	total = quantidadeQ * semanas
	valor = capacidadeN - total
	cont = cont + 1
	semanas = semana + 1
	
	print(valor)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    semanas = semana + 1
NameError: name 'semana' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:27) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 0

cont = 0

while (cont < capacidadeN):
	total = quantidadeQ * semanas
	valor = capacidadeN - total
	cont = cont + 1
	semanas = semanas + 1
	
	print(valor)
	
-- OUTPUT:
40
20
0
-20
-40
-60
-80
-100
-120
-140
-160
-180
-200
-220
-240
-260
-280
-300
-320
-340
-360
-380
-400
-420
-440
-460
-480
-500
-520
-540
-560
-580
-600
-620
-640
-660
-680
-700
-720
-740
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:10:36) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 0

cont = 0

while (cont < capacidadeN):
	total = quantidadeQ * semanas
	valor = capacidadeN - total
	cont = cont + 1
	semanas = semanas + 1
	
	print(valor)
	
-- EXECUTION TIME:
0.130498
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
40
20
0
-20
-40
-60
-80
-100
-120
-140
-160
-180
-200
-220
-240
-260
-280
-300
-320
-340
-360
-380
-400
-420
-440
-460
-480
-500
-520
-540
-560
-580
-600
-620
-640
-660
-680
-700
-720
-740
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
2
1
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
10
1
-8
-17
-26
-35
-44
-53
-62
-71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:22:35) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 0

cont = 0

while (cont < capacidadeN):
	total = capacidadeN - estoqueInicial
	valor = capacidadeN - total
	cont = cont + 1
	semanas = semanas + 1
	
	print(valor)
	
-- EXECUTION TIME:
0.222706
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
60
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
100
100
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
50
50
50
50
50
50
50
50
50
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:23:11) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 0

cont = 0

while (cont < capacidadeN):
	total = capacidadeN - estoqueInicial
	valor = quantidadeQ / total
	cont = cont + 1
	semanas = semanas + 1
	
	print(valor)
	
-- EXECUTION TIME:
0.183691
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
-0.01020408163265306
-0.01020408163265306
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
-0.225
-0.225
-0.225
-0.225
-0.225
-0.225
-0.225
-0.225
-0.225
-0.225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:11) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 0

cont = 0

while (cont < capacidadeN):
	total = capacidadeN - estoqueInicial
	valor = quantidadeQ / total
	cont = cont + 1
	semanas = semanas + 1
	
	print(valor)
	
-- OUTPUT:
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:46) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 0

cont = 0

while (cont < capacidadeN):
	total = capacidadeN - estoqueInicial
	semanas = quantidadeQ / total
	cont = cont + 1
	
	
	print(valor)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(valor)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:02) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 0

cont = 0

while (cont < capacidadeN):
	total = capacidadeN - estoqueInicial
	semanas = quantidadeQ / total
	cont = cont + 1
	
	
	print(semanas)
	
-- OUTPUT:
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
-1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:32) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * 1
	total = capacidadeN - estoqueInical / chegam
	cont = cont + 1
	
	
	print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total = capacidadeN - estoqueInical / chegam
NameError: name 'estoqueInical' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:48) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * 1
	total = capacidadeN - estoqueInicial / chegam
	cont = cont + 1
	
	
	print(total)
	
-- OUTPUT:
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:27:30) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * 1
	total = capacidadeN - estoqueInicial / chegam
	semanas = semanas + 1
	
		print(total)
	
-- EXECUTION TIME:
0.192816
-- ERROR:
  File "/home/codebench/codes/1752/1521/main.py", line 14
    print(total)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:31) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * 1
	total = capacidadeN - estoqueInicial / chegam
	semanas = semanas + 1
	
		print(total)
	
-- ERROR:
File "XXXX", line 14
    print(total)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:42) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * 1
	total = capacidadeN - estoqueInicial / chegam
	semanas = semanas + 1
	print(total)
	
-- OUTPUT:
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:08) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * semanas
	total = capacidadeN - estoqueInicial / chegam
	cont + 1
	(total)
	
-- OUTPUT:
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:25) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * semanas
	total = capacidadeN - estoqueInicial / chegam
	cont + 1
print (total)
	
-- OUTPUT:
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:42) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * semanas
	total = capacidadeN - estoqueInicial / chegam
	cont + 1
	print (total)
	
-- OUTPUT:
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:47:01) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < capacidadeN):
	chegam = quantidadeQ * semanas
	total = capacidadeN - estoqueInicial / chegam
	cont + 1
print (total)
	
-- EXECUTION TIME:
900.645
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:25) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < estoqueInicial):
	chegam = quantidadeQ * semanas
	total = capacidadeN - estoqueInicial / chegam
	cont + 1
print (total)
	
-- OUTPUT:
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:38) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < estoqueInicial):
	chegam = quantidadeQ * 1
	total = chegam / capacidadeN
	cont + 1
print (total)
	
-- OUTPUT:
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:48) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < estoqueInicial):
	chegam = quantidadeQ * 1
	total = chegam / capacidadeN
	cont + 1
	print (total)
	
-- OUTPUT:
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:50) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < estoqueInicial):
	chegam = quantidadeQ * 1
	total = chegam / capacidadeN
	cont + 1
	print (total)
	
-- OUTPUT:
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:31) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < estoqueInicial):
	chegam = quantidadeQ * semanas
	total = capacidadeN - estoqueInicial / chegam
	cont + 1
print (total)
	
-- EXECUTION TIME:
127.325
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:

-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:32) 
-- CODE:
capacidadeN = int(input("Informe numero de containers: "))
estoqueInicial = int(input("Estoque inicial de containers: "))
quantidadeQ = int(input("Quantidade de containers que chegam: "))

semanas = 1

cont = 0

while (cont < estoqueInicial):
	chegam = quantidadeQ * 1
	total = chegam / capacidadeN
	cont + 1
	print (total)
	
-- EXECUTION TIME:
42.7876
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
